--- a/App7Terminada/app/src/main/AndroidManifest.xml
+++ b/App7Terminada/app/src/main/AndroidManifest.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.alumno.aplicacion7intentimplicito">
-
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    package="com.example.vasilmilchov.app7terminada">
 
     <application
         android:allowBackup="true"
@@ -19,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".barra_cargando"></activity>
     </application>
 
 </manifest>
