--- a/Aplicacion9/app/src/main/AndroidManifest.xml
+++ b/Aplicacion9/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.vasilmilchov.aplicacion8ficheros">
+    package="com.example.alumno.aplicacion9">
 
     <application
         android:allowBackup="true"
@@ -17,4 +17,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
